# lychee-sitemap

./: ARCHITECTURE.md  Cargo.toml  README.md  sitemap.xml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: crawl.rs
